Fixed wrong margin and padding between faq items

--- a/src/faq/style.scss
+++ b/src/faq/style.scss
@@ -12,8 +12,8 @@
 
 	.faq {
 		&__item {
-			padding-bottom: 1rem;
-			margin-bottom: 1.25rem;
+			padding: 0.75rem 0;
+			margin-bottom: 0.75rem;
 			border-bottom: 1px solid #252b3350;
 
 			&.is-opened {
